# parity-signer

./: .buckconfig  .deepsource.toml  .editorconfig  .eslintignore  .eslintrc.js  .eslintrc.json  .flowconfig  .gitignore  .gitlab-ci.yml  .prettierrc  .rgignore  .travis.yml  404.html  CODEOWNERS  CONTRIBUTORS.md  Gemfile  HDKD.md  README.md  RELEASE_TESTING_GUIDELINES.md  ReactotronConfig.js  TESTING.md  app.js  app.json  babel.config.js  bitrise.yml  build.gradle  create-ndk-standalone.sh  gen_key.sh  gradle.properties  index.android.js  index.html  index.ios.js  index.js  jest-setup.js  jest.config.js  justfile  lintignore  metro.config.js  package-lock.json  package.json  (+25 more)
rust/: Cargo.toml  deny.toml
rust/constants/: Cargo.toml
rust/constants/src/: alice_polkadot_qr  alice_sr_0  alice_sr_1  alice_sr_alice  alice_sr_alice_secret_secret  alice_sr_alice_westend  alice_sr_kusama  alice_sr_polkadot  alice_sr_root  alice_sr_secret_abracadabra  alice_sr_secret_path_multipass  alice_sr_westend  alice_sr_westend_0  alice_sr_westend_1  alice_sr_westend_2  alice_westend_alice_qr  alice_westend_alice_secret_secret_qr  alice_westend_derivation_secret  alice_westend_root_qr  alice_westend_westend_qr  bob  dock_31  ed  empty_png  empty_vec_hash_pic  id_01  id_02  id_03  id_04  id_05  kusama_9130  kusama_9151  lib.rs  real_parity_verifier  shell_200  test_values.rs  types_known  types_unknown  westend_9000  westend_9010  (+4 more)
rust/database/database_cold/: db  snap.0000000000062A54  snap.00000000000A4805  snap.00000000000E5931
rust/database/database_cold_release/: db  snap.0000000000004862  snap.0000000000004B09  snap.0000000000004F79  snap.0000000000004FF1  snap.0000000000005240  snap.00000000000052C3  snap.000000000000531B  snap.0000000000005353  snap.000000000000539B  snap.00000000000053D3  snap.0000000000005467  snap.000000000000549F
rust/database/database_hot/: db  snap.00000000000556EF  snap.00000000000707A7  snap.00000000000D12AD  snap.000000000011B08C  snap.000000000011F6FB  snap.0000000000123DC4  snap.0000000000123E6B  snap.0000000000123F48  snap.000000000012446A  snap.00000000001244C2  snap.00000000001244FA  snap.00000000001245CC  snap.0000000000124614  snap.0000000000124694  snap.00000000001246D1  snap.0000000000124710  snap.00000000001B6707  snap.00000000001BA8F8
rust/db_handling/: Cargo.toml  database_output  identities  metadata_database.ts  readme.md
rust/db_handling/signer_database/: db
rust/db_handling/src/: address_book.rs  chainspecs.rs  cold_default.rs  constants.rs  db_transactions.rs  db_transactions_possible_short.rs  db_utils.rs  default_type_defs.rs  error.rs  helpers.rs  hot_default.rs  identities.rs  interface_signer.rs  lib.rs  main.rs  manage_history.rs  metadata.rs  network_details.rs  prep_messages.rs  remove_network.rs  remove_types.rs  settings.rs  tests.rs  users.rs
rust/db_handling/tests/: tests.rs  westend9090
rust/defaults/: Cargo.toml
rust/defaults/default_metadata/: kusama2030  rococo9103  westend9000
rust/defaults/nav_test_metadata/: polkadot9140
rust/defaults/release_metadata/: kusama9130  kusama9150  kusama9151  kusama9160  kusama9170  kusama9180  kusama9190  kusama9200  kusama9220  kusama9230  polkadot9150  polkadot9151  polkadot9170  polkadot9180  polkadot9190  polkadot9200  polkadot9220  polkadot9230  rococo9003  rococo9140  rococo9141  westend9130  westend9150  westend9151  westend9160  westend9170  westend9180  westend9190  westend9200  westend9201  westend9220  westend9230  westend9250
rust/defaults/src/: error.rs  lib.rs
rust/defaults/test_metadata/: polkadot30  westend9010
rust/definitions/: Cargo.toml  README.md
rust/definitions/data/: full_types_information
rust/definitions/for_tests/: centrifugeAmber  kusama9040  kusama9070  kusama9090  polkadot29  polkadot9080  rococo9002  shell200  westend9030  westend9033  westend9070  westend9080  westend_runtime-v9150.compact.compressed.wasm
rust/definitions/src/: constants.rs  crypto.rs  danger.rs  defaults.rs  derivations.rs  dynamic_derivations.rs  error.rs  error_active.rs  error_signer.rs  errors_sorting.rs  helpers.rs  history.rs  holds.rs  keyring.rs  lib.rs  metadata.rs  navigation.rs  network_specs.rs  print.rs  qr_transfers.rs  schema_version.rs  test_all_errors_signer.rs  transactions.rs  types.rs  users.rs
rust/extrinsic_proof/: Cargo.toml
rust/extrinsic_proof/src/: extrinsic_decoder.rs  lib.rs  proof_verifier.rs  state_machine.rs  tests.rs  types.rs  visitor.rs
rust/files/for_signing/: mock_key  mock_signature  sign_me_add_network_kusamaV9070  sign_me_add_network_polkadotV9050  sign_me_add_network_rococoV9004  sign_me_add_network_westendV9070  sign_me_add_network_westendV9080  sign_me_load_metadata_kusamaV9070  sign_me_load_metadata_kusamaV9090  sign_me_load_metadata_kusamaV9111  sign_me_load_metadata_polkadotV9050  sign_me_load_metadata_polkadotV9080  sign_me_load_metadata_polkadotV9090  sign_me_load_metadata_polkadotV9110  sign_me_load_metadata_rococoV9004  sign_me_load_metadata_rococoV9103  sign_me_load_metadata_rococoV9106  sign_me_load_metadata_westendV9070  sign_me_load_metadata_westendV9080  sign_me_load_metadata_westendV9090  sign_me_load_metadata_westendV9100  sign_me_load_metadata_westendV9111  (+2 more)
rust/fuzz/: README.md
rust/generate_message/: Cargo.toml  address_book  derivations-westend  derivations-westend.txt  pseudo_instruction.md  readme.md  standard_derivations_list
rust/generate_metadata_message/: Cargo.toml
rust/meta_reading/: Cargo.toml  address_book  readme.md
rust/navigator/: Cargo.toml
rust/parser/: Cargo.toml
rust/printing_balance/: Cargo.toml
rust/qr-fountain-gen/: Cargo.toml  networkMetadata.ts
rust/qr_reader_pc/: Cargo.toml  readme.md
rust/qr_reader_phone/: Cargo.toml
rust/qrcode_rtx/: Cargo.toml
rust/qrcode_static/: Cargo.toml
rust/signer/: Cargo.toml  Makefile  build.rs  copy_android.sh  setup.sh  signer.h  uniffi.toml
rust/transaction_parcing/: Cargo.toml  database_output  networkMetadata.ts
rust/transaction_parsing/: Cargo.toml  README.md  networkMetadata.ts
rust/transaction_signing/: Cargo.toml
(+4388 files in other folders)
