[workspace]
resolver = "1"

members = [
	"constants",
	"db_handling",
	"defaults",
	"definitions",
	"generate_message",
	"navigator",
	"parser",
	"printing_balance",
	"qr_reader_phone",
	"qr_reader_pc",
	"qrcode_rtx",
	"qrcode_static",
	"signer",
	"transaction_parsing",
	"transaction_signing",
	"fuzz/decode-call",
	"fuzz/grammar-fuzzer",
]
