[package]
name = "constants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = {version = "0.4.3", optional = true}

[features]
default = ["test"]

active = []
signer = []
test = ["active", "signer", "hex"]

[lib]
name = "constants"
crate-type = ["lib"]
