[package]
name = "db_handling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
constants = {path = "../constants"}
defaults = {path = "../defaults", default-features = false}
definitions = {path = "../definitions", default-features = false}
hex = {version = "0.4.3"}
lazy_static = "1.4.0"
parity-scale-codec = {version = "3.4.0", features = ["derive"]}
plot_icon = {version = "0.2.0", default-features = false, features = ["pix"]}
regex = "1.7.1"
sled = "0.34.6"
sp-core = {version = "18.0.0", default-features = false, features = ["full_crypto"]}
sp-runtime = {version = "21.0.0", default-features = false}
thiserror = "1.0.39"
time = {version = "0.3.20", features = ["formatting", "macros"]}
tiny-bip39 = {version = "1.0.0", default-features = false}
zeroize = { version = "1.5.7", features = ["std"] }

[dev-dependencies]
pretty_assertions = { version = "1.3" }
tempfile = { version = "3.4" }

[features]
default = []
active = ["defaults/active", "definitions/active"]

[lib]
name = "db_handling"
crate-type = ["lib"]
