[package]
name = "db_handling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
constants = {path = "../constants"}
defaults = {path = "../defaults", default-features = false, optional = true}
definitions = {path = "../definitions", default-features = false}
qrcode_rtx = {path = "../qrcode_rtx", default-features = false}
hex = {version = "0.4.3"}
lazy_static = "1.4.0"
parity-scale-codec = {version = "3.6.9", features = ["derive"]}
regex = "1.11.3"
sled = "0.34.6"
sp-core = {git = "https://github.com/paritytech/substrate", rev = "49734dd1d72a00b9d3b87ba397661a63e0e17af3", default-features = false, features = ["full_crypto"], optional = true}
sp-runtime = {git = "https://github.com/paritytech/substrate", rev = "49734dd1d72a00b9d3b87ba397661a63e0e17af3", default-features = false, optional = true}
thiserror = "1.0.57"
time = {version = "0.3.36", features = ["formatting", "macros"]}
tiny-bip39 = {version = "1.0.0", default-features = false, optional = true}
zeroize = { version = "1.7.0", optional = true, features = ["std"] }

[dev-dependencies]
pretty_assertions = { version = "1.4" }
tempfile = { version = "3.10" }

[features]
default = []
active = ["defaults/active", "definitions/active", "tiny-bip39", "sp-core", "sp-runtime", "zeroize"]
test = []

[lib]
name = "db_handling"
crate-type = ["lib"]
