[package]
name = "defaults"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
definitions = {path = "../definitions", default-features = false}
lazy_static = {version = "1.4.0", optional = true}
regex = {version = "1.7.1", optional = true}
sp-core = {version = "18.0.0", default-features = false, features = ["full_crypto"]}
sp-runtime = {version = "21.0.0", default-features = false}
thiserror = "1.0.39"

[features]
default = []
active = [
	"definitions/active",
	"lazy_static",
	"regex",
]

[lib]
name = "defaults"
crate-type = ["lib"]
