[package]
name = "defaults"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
definitions = {path = "../definitions", default-features = false, optional = true}
lazy_static = {version = "1.4.0", optional = true}
regex = {version = "1.10.2", optional = true}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, features = ["full_crypto"]}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false}
thiserror = "1.0.52"

[features]
default = []
active = [
	"definitions/active",
	"lazy_static",
	"regex",
]

[lib]
name = "defaults"
crate-type = ["lib"]
