[package]
name = "definitions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-blockies = "1.0.0"
constants = { path = "../constants" }
frame-metadata = {version = "15.0.0", features = ["std", "legacy"]}
hex = "0.4.3"
libsecp256k1 = "0.7.1"
parity-scale-codec = {version = "3.4.0", features = ["derive"]}
plot_icon = "0.2.0"
sc-executor-common = {version = "0.20.0", optional = true}
sc-executor-wasmi = {version = "0.20.0", optional = true}
sled = "0.34.6"
sp-core = {version = "18.0.0", default-features = false, features = ["full_crypto"]}
sp-io = {version = "20.0.0", default-features = false, optional = true}
sp-runtime = {version = "21.0.0", default-features = false}
sp-version = {version = "19.0.0", default-features = false}
sp-wasm-interface = {version = "12.0.0", optional = true, default-features = false, features = ["wasmi"]}
thiserror = "1.0.39"

[features]
default = []
active = [
	"sc-executor-wasmi",
	"sp-io",
	"sp-wasm-interface",
	"sc-executor-common",
]

[lib]
name = "definitions"
crate-type = ["lib"]

[dev-dependencies]
pretty_assertions = "1.3.0"
