[package]
name = "definitions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-metadata = {version = "16.0.0", features = ["std", "legacy"]}
hex = "0.4.3"
libsecp256k1 = "0.7.1"
parity-scale-codec = {version = "3.6.9", features = ["derive"]}
sc-executor-common = {git = "https://github.com/paritytech/substrate"}
sc-executor-wasmi = {git = "https://github.com/paritytech/substrate", optional = true}
sled = "0.34.6"
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, features = ["full_crypto"]}
sp-io = {git = "https://github.com/paritytech/substrate", optional = true}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false}
sp-version = {git = "https://github.com/paritytech/substrate"}
sp-wasm-interface = {git = "https://github.com/paritytech/substrate", optional = true}
thiserror = "1.0.56"
constants = {path = "../constants"}

[features]
default = []
active = [
	"sc-executor-wasmi",
	"sp-io",
	"sp-wasm-interface",
]

[lib]
name = "definitions"
crate-type = ["lib"]

[dev-dependencies]
pretty_assertions = "1.4.0"
