[package]
name = "definitions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-metadata = {version = "16.0.0", features = ["std", "legacy"]}
hex = "0.4.3"
libsecp256k1 = "0.7.1"
parity-scale-codec = {version = "3.6.9", features = ["derive"]}
sc-executor-common = {version = "0.36.0"}
sc-executor-wasmi = {version = "0.22.0", optional = true}
sled = "0.34.6"
sp-core = {version = "35.0.0", default-features = false, features = ["full_crypto"]}
sp-io = {version = "39.0.0", optional = true}
sp-runtime = {version = "40.1.0", default-features = false}
sp-version = {version = "38.0.0"}
sp-wasm-interface = {version = "21.0.1", optional = true}
thiserror = "1.0.57"
constants = {path = "../constants"}

[features]
default = []
active = [
	"sc-executor-wasmi",
	"sp-io",
	"sp-wasm-interface",
]

[lib]
name = "definitions"
crate-type = ["lib"]

[dev-dependencies]
pretty_assertions = "1.4.0"
