[package]
name = "generate_message"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
constants = {path = "../constants"}
db_handling = {path = "../db_handling", default-features = false, features = ["active"]}
definitions = {path = "../definitions", default-features = false, features = ["active"]}
hex = "0.4.3"
jsonrpsee = {version = "0.16.2", features = ["ws-client"]}
lazy_static = "1.4.0"
parity-scale-codec = "3.4.0"
qrcode_rtx = {path = "../qrcode_rtx"}
regex = "1.7.1"
serde_json = "1.0.94"
sled = "0.34.6"
sp-core = {version = "18.0.0", default-features = false, features = ["full_crypto"]}
sp-runtime = { version = "21.0.0", default-features = false }
sp-keyring = { version = "21.0.0", default-features = false }
thiserror = "1.0.39"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
defaults = {path = "../defaults", features = ["active"]}
tempfile = "3.4"
