[package]
name = "generate_message"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
constants = {path = "../constants"}
db_handling = {path = "../db_handling", default-features = false, features = ["active"]}
definitions = {path = "../definitions", default-features = false, features = ["active"]}
hex = "0.4.3"
jsonrpsee = {version = "0.24.8", features = ["ws-client"]}
lazy_static = "1.4.0"
parity-scale-codec = "3.6.9"
qrcode_rtx = {path = "../qrcode_rtx"}
regex = "1.10.3"
serde_json = "1.0.114"
sled = "0.34.6"
sp-core = {version = "35.0.0", default-features = false, features = ["full_crypto"]}
sp-runtime = { version = "40.1.0", default-features = false }
sp-keyring = { version = "40.0.0", default-features = false }
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
defaults = {path = "../defaults", features = ["active"]}
tempfile = "3.10"
