[package]
name = "meta_reading"
version = "0.1.1"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
parity-scale-codec = "2.1.1"
parity-scale-codec-derive = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
frame-metadata = "13.0.0"
jsonrpsee-types = "0.2.0-alpha.6"
jsonrpsee-ws-client = "0.2.0-alpha.6"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
regex = "1.4.5"
json = "0.12.4"
blake2-rfc = "0.2.18"
