[package]
name = "meta_reading"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
parity-scale-codec = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
frame-metadata = "13.0.0"
jsonrpsee-types = "0.2.0-alpha.6"
jsonrpsee-ws-client = "0.2.0-alpha.6"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
definitions = {path = "../definitions"}

[lib]
name = "meta_reading"
crate-type = ["lib"]
