[package]
name = "navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db_handling = {path = "../db_handling", default-features = false, features = ["signer"]}
definitions = {path = "../definitions", default-features = false, features = ["signer"]}
hex = "0.4.3"
lazy_static = "1.4.0"
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false}
transaction_parsing = {path = "../transaction_parsing"}
transaction_signing = {path = "../transaction_signing"}
zeroize = "1.5.6"

[dev-dependencies]
blake2-rfc = { version = "0.2.18" }
constants = { path = "../constants", features = ["test"] }
image = { version = "0.24.3", default-features = false, features = ["ico"] }
parser = { path = "../parser", default-features = false }
quircs = { version = "0.10.0" }
regex = { version = "1.6.0" }
db_handling = {path = "../db_handling"}

pretty_assertions = "1"

sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, features = ["full_crypto"] }

[lib]
name = "navigator"
crate-type = ["lib"]
