[package]
name = "navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db_handling = {path = "../db_handling", default-features = false }
definitions = {path = "../definitions", default-features = false }
hex = "0.4.3"
lazy_static = "1.4.0"
sp-runtime = {version = "21.0.0", default-features = false}
thiserror = "1.0.39"
transaction_parsing = {path = "../transaction_parsing"}
transaction_signing = {path = "../transaction_signing"}
zeroize = { version = "1.5.7", features = ["std"] }
qrcode_rtx = { path = "../qrcode_rtx" }
parity-scale-codec = "3.4.0"
sled = "0.34"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3.4"
regex = { version = "1.7.1" }

sp-core = { version = "18.0.0", default-features = false, features = ["full_crypto"] }

constants = { path = "../constants" }
parser = { path = "../parser", default-features = false }
db_handling = {path = "../db_handling"}



[lib]
name = "navigator"
crate-type = ["lib"]
