[package]
name = "navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db_handling = {path = "../db_handling", default-features = false }
definitions = {path = "../definitions", default-features = false }
hex = "0.4.3"
lazy_static = "1.4.0"
sp-runtime = {git = "https://github.com/paritytech/substrate", tag = "monthly-2023-05", default-features = false}
banana_recovery = { git = "https://github.com/paritytech/banana-recovery-rust" }
thiserror = "1.0.57"
transaction_parsing = {path = "../transaction_parsing"}
transaction_signing = {path = "../transaction_signing"}
zeroize = { version = "1.7.0", features = ["std"] }
qrcode_rtx = { path = "../qrcode_rtx" }
parity-scale-codec = "3.6.9"
sled = "0.34"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3.10"
regex = { version = "1.10.3" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "monthly-2023-05", default-features = false, features = ["full_crypto"] }

constants = { path = "../constants" }
parser = { path = "../parser", default-features = false }
db_handling = {path = "../db_handling"}



[lib]
name = "navigator"
crate-type = ["lib"]
