[package]
name = "parser"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
definitions = {path = "../definitions", default-features = false}
frame-metadata = { version = "16.0.0", default-features = false, features = ["std", "legacy"]}
hex = "0.4.3"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
parity-scale-codec = {version = "3.6.9", features = ["derive", "bit-vec"]}
printing_balance = {path = "../printing_balance"}
blake3 = { version = "1.5.0", default-features = false }
regex = "1.10.3"
scale-info = "2.10.0"
sp-arithmetic = {git = "https://github.com/paritytech/substrate", rev = "49734dd1d72a00b9d3b87ba397661a63e0e17af3"}
sp-core = {git = "https://github.com/paritytech/substrate", rev = "49734dd1d72a00b9d3b87ba397661a63e0e17af3", default-features = false, features = ["full_crypto"]}
sp-runtime = {git = "https://github.com/paritytech/substrate", rev = "49734dd1d72a00b9d3b87ba397661a63e0e17af3", default-features = false}
scale-decode = { version = "0.13.0", default-features = false }
thiserror = "1.0.57"

[dev-dependencies]
pretty_assertions = "1"
defaults = { path = "../defaults", default-features = false, features = ["active"] }
subxt = { version = "0.27", default-features = false }

[lib]
name = "parser"
crate-type = ["lib"]
