[package]
name = "qr_reader_pc"
version = "0.2.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
qr_reader_phone = {path = "../qr_reader_phone"}
anyhow = "1.0.72"
image = "0.24.6"
quircs = "0.10.1"
indicatif = "0.17.5"

[dependencies.opencv]
version = "0.83"
default-features = false
features = ["videoio", "imgproc", "highgui"]
