[package]
name = "qr_reader_pc"
version = "0.2.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
qr_reader_phone = {path = "../qr_reader_phone"}
anyhow = "1.0.77"
image = "0.24.7"
quircs = "0.10.1"
indicatif = "0.17.7"

[dependencies.opencv]
version = "0.88"
default-features = false
features = ["videoio", "imgproc", "highgui"]
