[package]
name = "qr_reader_phone"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
raptorq = "1.7.0"
nom = "7.1.1"
thiserror = "1.0.37"

[lib]
name = "qr_reader_phone"
crate-type = ["lib"]
