[package]
name = "qr_reader_phone"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
raptorq = "1.8.1"
nom = "7.1.3"
thiserror = "1.0.57"
constants = {path = "../constants"}
banana_recovery = { git = "https://github.com/paritytech/banana-recovery-rust" }
db_handling = { path = "../db_handling" }
transaction_parsing = { path = "../transaction_parsing" }
definitions = {path = "../definitions", default-features = false}

[lib]
name = "qr_reader_phone"
crate-type = ["lib"]
