[package]
name = "qrcode_rtx"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
hex = "0.4.3"
raptorq = "2.0.0"
qrcodegen = "1.8.0"
png = "0.17.13"

definitions = { path = "../definitions" }
constants = { path = "../constants" }
qrcode_static = { path = "../qrcode_static" }

[lib]
name = "qrcode_rtx"
crate-type = ["lib"]
