[package]
name = "qrcode_static"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
png = "0.16.8"
anyhow = "1.0.42"
constants = {path = "../constants"}
qrcodegen = "1.6.0"


[lib]
name = "qrcode_static"
crate-type = ["lib"]
