[package]
name = "qrcode_static"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
bitvec = "1.0.0"
constants = {path = "../constants"}
hex = "0.4.3"
png = "0.17.3"
qrcodegen = "1.8.0"

[lib]
name = "qrcode_static"
crate-type = ["lib"]
