[package]
name = "qrcode_static"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bitvec = "1.0.1"
constants = {path = "../constants"}
png = "0.17.13"
qrcodegen = "1.8.0"

[dev-dependencies]
hex = "0.4.3"

[lib]
name = "qrcode_static"
crate-type = ["lib"]
