[package]
name = "signer"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
ffi-support = "0.4"
hex = "0.4.3"
uniffi = { version = "0.22.0" }

sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, features = ["full_crypto"] }

db_handling = { path = "../db_handling", default-features = false, features = ["signer"] }
definitions = { path = "../definitions", default-features = false, features = ["signer"] }
transaction_parsing = {path = "../transaction_parsing"}
navigator = { path = "../navigator", default-features = false }
qr_reader_phone = { path = "../qr_reader_phone" }
qrcode_static = { path = "../qrcode_static" }
log = "0.4.17"

[target.'cfg(all(not(target_os = "android"), not(target_os = "ios")))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
log = "0.4.17"

[build-dependencies]
definitions = {path = "../definitions"}
generate_message = {path = "../generate_message"}
uniffi_build = { version = "0.22.0", features = ["builtin-bindgen"] }

[lib]
crate-type = ["staticlib", "cdylib"]
