[package]
name = "transaction_parsing"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constants = {path = "../constants", default-features = false}
db_handling = {path = "../db_handling", default-features = false }
definitions = {path = "../definitions", default-features = false }
frame-metadata = {version = "16.0.0", default-features = false}
hex = "0.4.3"
parity-scale-codec = "3.6.9"
parser = {path = "../parser", default-features = false}
sled = "0.34.6"
sp-core = {version = "35.0.0", default-features = false, features = ["full_crypto"]}
sp-runtime = {version = "40.1.0", default-features = false}
thiserror = "1.0.57"
nom = "7.1.3"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1"
db_handling = {path = "../db_handling"}
tempfile = "3.10"

[lib]
name = "transaction_parsing"
crate-type = ["lib"]
