[package]
name = "transaction_signing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
parity-scale-codec = "3.4.0"
zeroize = { version = "1.5.7", features = ["std"] }

definitions = { path = "../definitions", default-features = false }
db_handling = { path = "../db_handling", default-features = false }
sp-core = { version = "18.0.0", default-features = false, features = ["full_crypto"] }
sp-runtime = { version = "21.0.0", default-features = false }
thiserror = "1.0.39"
anyhow = "1.0.69"
sled = "0.34"


[dev-dependencies]
pretty_assertions = "1"
sled = "0.34.6"
constants = { path = "../constants" }
db_handling = {path = "../db_handling"}
transaction_parsing = { path = "../transaction_parsing", default-features = false }
tempfile = "3.4"

[lib]
name = "transaction_signing"
crate-type = ["lib"]
