[package]
name = "transaction_signing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
parity-scale-codec = "3.6.9"
zeroize = { version = "1.7.0", features = ["std"] }

definitions = { path = "../definitions", default-features = false }
db_handling = { path = "../db_handling", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
thiserror = "1.0.55"
anyhow = "1.0.79"
sled = "0.34"


[dev-dependencies]
pretty_assertions = "1"
sled = "0.34.6"
constants = { path = "../constants" }
db_handling = {path = "../db_handling"}
transaction_parsing = { path = "../transaction_parsing", default-features = false }
tempfile = "3.9"

[lib]
name = "transaction_signing"
crate-type = ["lib"]
